adds route animation and remove unwanted css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
 
+<div [@routeAnimations]="prepareRoute(outlet)" >
+  <router-outlet #outlet="outlet"></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
+<div *ngIf="!this._router.url.includes('contact')" class="fixed bottom-4 right-4">
+  <a mat-fab color="primary" [routerLink]="'new-contact'">
+    <mat-icon>add</mat-icon>
+  </a>
+</div>
 
 <!-- <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
   <title>Gray Clouds Background</title>
